--- a/index.html
+++ b/index.html
@@ -124,30 +124,25 @@
         <div class="container words">
             <div id="thanks">
                 <p>
-                    Thank you seems like such a small word when compared to the school and instructors who have become
-                    our heroes. When we began this journey, we didn't quite know what to expect but now that we have
-                    come through the fire, we are grateful for everyone who helped us along the way.
+                   When cohort 53 first started class we were all strangers who came from all very different walks of life. 
+                   Some of us came from higher education, others came from the service industry but with the help from the instructors mentioned below, 
+                   those seemingly large gaps between us became only a few paces all in part because we all share something in common now- a curiosity to learn how to be software developers. 
                 </p>
                 <hr>
                 <p>
-                    Thank you to our amazing instructors; we couldn't have done it without you! Steve, Meg, Jared,
-                    Hannah, and Greg.
+                    A big thank you to our instructors who taught us how to learn and help guide us during the last few months; Joe Shepherd, Joshua Barton, Dakota Lambert, 
+                    Christinia Ashworth and Monica Kay Provence. 
+                   
                 </p>
                 <hr>
-                <p>
-                    Thank you also to the NSS staff! Jessica, Jeremiah, Laura, Mandy, and Kristin. You guys keep things
-                    moving
-                    smoothly and we appreciate all of your hard work!
+                <p>          
+                        The career developlment team has been vital to our success as well, they deserve all the praise: Ashley Canino and Marla Lamont, thank you! 
                     <br>
                     <br>
-                    We are grateful for John Wark and his vision for Nashville Software School. We wouldn't be here
-                    without you and we are grateful!
                 </p>
                 <hr>
                 <p>
-                    Finally, a huge thank you to Kristen Norris, John Dulaney, Greg Lawrence, and Garrett Ward for
-                    planning and creating this
-                    site -- all while learning our server side technology!
+                   Lastly a big thanks to Fred Schmidt, Jacob Frensley, So ra Chung, Matthew Anderson and Sharif Rashed for creating this class project!
                 </p>
             </div>
         </div>
