--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Cohort [number] - Nashville Software School</title>
+    <title>Cohort 53 - Nashville Software School</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -15,15 +15,16 @@
 </head>
 
 <body>
+    <img src="../images/background.png" alt="Background Swirl" class="background"/>
     <!-- Navigation and Header Bar -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
 
             <a class="navbar-brand" href="#">
                 <img src="images/nsslogo.png" class="d-inline-block align-top logo" alt="Cohort 22 Logo">
             </a>
             <a href="#">
-                <h2 id="cohort22">Cohort [number] | Demo Day [DATE]</h2>
+                <h2 id="cohort22">Cohort 53 | Demo Day [DATE]</h2>
 
             </a>
 
@@ -61,11 +62,11 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/CohortGroupPhotos/2018_02_06_C22_Group_0017_T_W.jpg" alt="First slide">
+                    <img class="d-block w-100" src="images/C53-Logo.png" alt="First slide">
                 </div>
-                <div class="carousel-item">
+                <!-- <div class="carousel-item">
                     <img class="d-block w-100" src="images/CohortGroupPhotos/2018_02_06_C22_Group_0032_T_W.jpg" alt="Second slide">
-                </div>
+                </div> -->
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -89,7 +90,7 @@
         <!-- developer section -->
         <div class="container">
             <!-- Do not remove H1 tag, it may be moved higher on the page. -->
-            <h1 class="text-center">Nashville Software School Cohort [NUM]</h1>
+            <h1 class="text-center">Nashville Software School Cohort 53</h1>
             <!-- update href to be the exact link for your demo day's Eventbrite page -->
             <h3 id="demo-date"><a href="https://www.eventbrite.com/o/nashville-software-school-7812824605" target="_blank">Come see us demo on [DATE]!</a></h3>
             <div id="cohort" class="row">
@@ -151,7 +152,7 @@
     <!-- footer -->
     <footer class="navbar navbar-light bg-light footer">
         <p>
-            &copy; 2018. Nashville Software School Cohort [number].
+            &copy; 2022. Nashville Software School Cohort 53.
         </p>
     </footer>
 
