--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img src="images/nsslogo.png" class="d-inline-block align-top logo" alt="Cohort 22 Logo">
             </a>
             <a href="#">
-                <h2 id="cohort22">Cohort 53 | Demo Day [DATE]</h2>
+                <h2 id="cohort22">Cohort 53 | Demo Day May 13, 2022</h2>
 
             </a>
 
@@ -92,7 +92,10 @@
             <!-- Do not remove H1 tag, it may be moved higher on the page. -->
             <h1 class="text-center">Nashville Software School Cohort 53</h1>
             <!-- update href to be the exact link for your demo day's Eventbrite page -->
-            <h3 id="demo-date"><a href="https://www.eventbrite.com/o/nashville-software-school-7812824605" target="_blank">Come see us demo on [DATE]!</a></h3>
+            <h3 id="demo-date"><a href="https://www.eventbrite.com/o/nashville-software-school-7812824605" target="_blank">Come see us demo on May 13!</a></h3>
+            <center><button type="button" class="btn btn-outline-primary title-font bottom" id="swirl-trigger">
+                Activate C53 Zone
+            </button></center>
             <div id="cohort" class="row">
                 <!-- content inserted from the cohort.json file -->
             </div>
