--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="images/C53-Logo.png" alt="First slide">
                 </div>
-                <!-- <div class="carousel-item">
-                    <img class="d-block w-100" src="images/CohortGroupPhotos/2018_02_06_C22_Group_0032_T_W.jpg" alt="Second slide">
-                </div> -->
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/Cohort-53-Group-Photo.png" alt="Second slide">
+                </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
